Fix spacing

--- a/src/assets/styles/_common.sass
+++ b/src/assets/styles/_common.sass
@@ -2,7 +2,7 @@ body
   color: $grey1
   margin: 0
   padding: 0
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Open Sans", Arial, sans-serif
   line-height: 150%
   overflow-x: hidden
   > section
@@ -22,7 +22,7 @@ body
 
 sup
   vertical-align: super
-  font-size: small
+  font-size: .7em
 
 h2
   font-size: 2em
