--- a/src/assets/styles/sections/_invite.sass
+++ b/src/assets/styles/sections/_invite.sass
@@ -12,7 +12,7 @@ section.invite
   .box
     background: rgba($primary, 0.95)
     text-align: center
-    width: 25em
+    width: 26em
     float: right
     margin: 2em
     padding: 2em
@@ -30,16 +30,16 @@ section.invite
       font-weight: normal
       margin-bottom: 15px
     .date
-      font-size: 1.5em
-      font-weight: 400
+      font-size: 1em
+      font-weight: 100
       margin-bottom: 30px
       @media all and (max-width: 768px)
         font-size: 1em
     .invite-msg
       font-size: 1.5em
       line-height: 1.5em
-      font-weight: 100
-      margin-bottom: 30px
+      font-weight: 400
+      margin-bottom: 15px
       //@media all and (max-width: 480px)
       //  font-size: 1.5em
 
