--- a/src/assets/styles/sections/_mkto-overrides.sass
+++ b/src/assets/styles/sections/_mkto-overrides.sass
@@ -9,10 +9,6 @@ section.register
       margin-top: .5em
       &:nth-child(5)
         margin-top: 2em
-      &:nth-child(9)
-        margin-top: 2em
-      &:nth-child(12)
-        margin-top: 2em
       .mktoFormCol, .mktoFieldWrap
         @media all and ("max-width: 530px")
           float: none
@@ -72,6 +68,7 @@ section.register
           @media all and (min-width: 560px)
             margin-left: 15.5em
             width: 8em
+            margin-top: 10px
       .tag
         font-size: .8em
         font-style: italic
@@ -80,7 +77,7 @@ section.register
           margin-left: 19.5em
 
 #customFormQuestionCareerOpportunities
-  margin-top: 10px
+  margin-top: 41px
 
 .register
   .mktoForm
